Update bazel